SET(MOOSUTILITYLIB_SRCS
   MOOSTerrain.cpp
   ScalarPID.cpp
   PitchZPID.cpp
   MOOSGeodesy.cpp
   ThirdPartyRequest.cpp
   )

ADD_LIBRARY(MOOSUtility ${MOOSUTILITYLIB_SRCS})

# install headers
INSTALL( FILES ${INSTALL_HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/MOOSUtilityLib )

# install libraries
INSTALL(TARGETS
MOOSUtility
RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

